--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,9 +21,7 @@
   --blue-crayola: hsla(219, 72%, 56%, 1);
   --black-coral: hsla(220, 12%, 43%, 1);
 
-  /**
-   * typography
-   */
+  /* * typography*/
 
   --ff-manrope: 'Manrope', sans-serif;
 
@@ -42,17 +40,13 @@
 
   --section-padding: 90px;
 
-  /**
-   * box shadow
-   */
+  /* * box shadow*/
 
   --shadow-1: 0 0 20px hsla(216, 14%, 14%, 0.05);
   --shadow-2: 0 0 0 0.05rem hsla(214, 88%, 27%, 0.08), 0 0 1.25rem hsla(216, 14%, 14%, 0.06);
   --shadow-3: 0 0 1.25rem hsla(216, 14%, 14%, 0.04);
 
-  /**
-   * border radius
-   */
+  /** * border radius */
 
   --radius-circle: 50%;
   --radius-pill: 100px;
@@ -60,19 +54,13 @@
   --radius-8: 8px;
   --radius-6: 6px;
 
-  /**
-   * transition
-   */
+  /** * transition */
 
   --transition-1: 0.25s ease;
   --transition-2: 0.5s ease;
   --transition-3: 0.3s ease-in-out;
 
 }
-
-
-
-
 
 /* #RESET */
 
@@ -137,9 +125,6 @@ body.nav-active { overflow: hidden; }
 ::-webkit-scrollbar-thumb { background-color: hsl(0, 0%, 80%); }
 
 ::-webkit-scrollbar-thumb:hover { background-color: hsl(0, 0%, 70%); }
-
-
-
 
 
 /* #REUSED STYLE-*/
@@ -233,7 +218,6 @@ body.nav-active { overflow: hidden; }
 }
 
 .w-100 { width: 100%; }
-
 
 /* #HEADER-*/
 
@@ -352,9 +336,6 @@ body.nav-active { overflow: hidden; }
 }
 
 
-
-
-
 /* #HERO (slider ) */
 
 .hero {
@@ -447,9 +428,6 @@ body.nav-active { overflow: hidden; }
 .hero .slider-btn.next { right: 20px; }
 
 
-
-
-
 /* #SERVICE-*/
 
 .service { text-align: center; }
@@ -491,13 +469,7 @@ body.nav-active { overflow: hidden; }
 
 .service-card .btn-text:is(:hover, :focus-visible) { opacity: 0.9; }
 
-
-
-
-
-/*-----------------------------------*\
-  #ABOUT
-\*-----------------------------------*/
+/* ------------------#ABOUT------------------  */
 
 .about .container {
   display: grid;
@@ -555,9 +527,7 @@ body.nav-active { overflow: hidden; }
 
 .stats-card .card-text > * { color: var(--white); }
 
-/*-----------------------------------*\
-  #PROJECT
-\*-----------------------------------*/
+/*-----------------------------------*\#PROJECT\*-----------------------------------*/
 
 .project { background-color: var(--cultured); }
 
@@ -596,12 +566,7 @@ body.nav-active { overflow: hidden; }
 }
 
 
-
-
-
-/*-----------------------------------*\
-  #CTA
-\*-----------------------------------*/
+/*-----------------------------------*\#CTA\*-----------------------------------*/
 
 .cta { background-color: var(--charcoal); }
 
@@ -622,12 +587,7 @@ body.nav-active { overflow: hidden; }
 }
 
 
-
-
-
-/*-----------------------------------*\
-  #FOOTER
-\*-----------------------------------*/
+/*-----------------------------------*\#FOOTER\*-----------------------------------*/
 
 .footer {
   background-color: var(--charcoal);
@@ -681,23 +641,13 @@ body.nav-active { overflow: hidden; }
   font-weight: var(--fw-700);
 }
 
+/*-----------------------------------*\#MEDIA QUERIES\*-----------------------------------*/
 
-
-
-
-/*-----------------------------------*\
-  #MEDIA QUERIES
-\*-----------------------------------*/
-
-/**
- * responsive for large than 575px screen
- */
+/*** responsive for large than 575px screen*/
 
 @media (min-width: 575px) {
 
-  /**
-   * REUSED STYLE
-   */
+  /*** REUSED STYLE*/
 
   .container {
     max-width: 540px;
@@ -705,45 +655,27 @@ body.nav-active { overflow: hidden; }
     margin-inline: auto;
   }
 
-
-
-  /**
-   * PROJECTS
-   */
+  /*** PROJECTS*/
 
   .project-card .card-content { padding: 40px; }
 
 }
 
-
-
-
-
-/**
- * responsive for large than 768px screen
- */
+/*** responsive for large than 768px screen*/
 
 @media (min-width: 768px) {
 
-  /**
-   * CUSTOM PROPERTY
-   */
+  /*** CUSTOM PROPERTY*/
 
   :root {
 
-    /**
-     * spacing
-     */
+    /*** spacing*/
 
     --section-padding: 120px;
 
   }
 
-
-
-  /**
-   * REUSED STYLE
-   */
+  /** * REUSED STYLE*/
 
   .container { max-width: 720px; }
 
@@ -802,17 +734,11 @@ body.nav-active { overflow: hidden; }
 
 @media (min-width: 992px) {
 
-  /**
-   * REUSED STYLE
-   */
+  /*** REUSED STYLE*/
 
   .container { max-width: 960px; }
 
-
-
-  /**
-   * HEADER
-   */
+  /** * HEADER*/
 
   .nav-open-btn,
   .navbar > *:not(.navbar-list),
@@ -847,10 +773,7 @@ body.nav-active { overflow: hidden; }
   .header .btn { margin-inline-start: 0; }
 
 
-
-  /**
-   * HERO
-   */
+  /*** HERO */
 
   .hero {
     padding-block-start: calc(var(--section-padding) + 50px);
@@ -869,30 +792,18 @@ body.nav-active { overflow: hidden; }
 
   .btn-wrapper { justify-content: flex-start; }
 
-
-
-  /**
-   * STATS
-   */
+  /*** STATS*/
 
   .stats-card { grid-template-columns: repeat(4, 1fr); }
 
-
-
-  /**
-   * PROJECT
-   */
+  /** PROJECT */
 
   .project .section-title {
     max-width: 32ch;
     margin-inline: auto;
   }
 
-
-
-  /**
-   * CTA
-   */
+  /** * CTA*/
 
   .cta .container {
     display: flex;
@@ -908,67 +819,42 @@ body.nav-active { overflow: hidden; }
   }
 
 
-
-  /**
-   * FOOTER
-   */
+  /** FOOTER*/
 
   .footer .grid-list { grid-template-columns: repeat(4, 1fr); }
 
 }
 
 
-/**
- * responsive for large than 1200px screen
- */
+/*** responsive for large than 1200px screen*/
 
 @media (min-width: 1200px) {
 
-  /**
-   * REUSED STYLE
-   */
+  /*** REUSED STYLE*/
 
   .container { max-width: 1140px; }
 
-
-
-  /**
-   * HERO
-   */
+  /** * HERO*/
 
   .hero-text { padding-inline-end: 100px; }
 
 
 
-  /**
-   * SERVICE
-   */
+  /** * SERVICE*/
 
   .service .grid-list { grid-template-columns: repeat(4, 1fr); }
 
-
-
-  /**
-   * STATS
-   */
+  /*** STATS*/
 
   .stats .container { max-width: 70%; }
 
   .stats-card { padding: 60px; }
 
-
-
-  /**
-   * PROJECT
-   */
+  /*** PROJECT*/
 
   .project .grid-list { grid-template-columns: repeat(3, 1fr); }
 
-
-
-  /**
-   * FOOTER
-   */
+  /*** FOOTER */
 
   address.footer-text {
     padding-inline-end: 100px;
@@ -978,26 +864,15 @@ body.nav-active { overflow: hidden; }
 }
 
 
-
-
-
-/**
- * responsive for large than 1400px screen
- */
+/*** responsive for large than 1400px screen*/
 
 @media (min-width: 1400px) {
 
-  /**
-   * REUSED STYLE
-   */
+  /*** REUSED STYLE*/
 
   .container { max-width: 1320px; }
 
-  
-
-  /**
-   * FEATURE
-   */
+  /*** FEATURE*/
 
   .feature-list { grid-template-columns: 1fr 1fr; }
 
