--- a/assets/css/AboutUs.css
+++ b/assets/css/AboutUs.css
@@ -143,7 +143,7 @@ body {
   }
   
   .about-section {
-    padding: 50px;
+    padding: 20px;
     text-align: center;
     height: 50vh;
    background-color: #5ce1e681;
@@ -164,7 +164,12 @@ body {
     z-index: -1;
 }
   .about-section h1{ 
-    margin-top: 50px;
+    position: absolute;
+    top: 90px;
+    left: 0;
+    margin:auto;
+    position: relative;
+    align-self: center;
   }
   
   .container {
