--- a/Stayel.css
+++ b/Stayel.css
@@ -16,7 +16,7 @@
 .home {
     width: 100%;
     height: 100vh;
-    background-color: #171a1c;
+    background-color: #ffffff;
     display: flex;
     flex-direction: column;
     color: #ffffff;
@@ -373,19 +373,25 @@ h3 {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #171a1c;
-    background: #171a1c;
+    background-color: #ffffff;
+    background: #94cef5;
 }
 .slide-container {
     max-width: 1120px;
     width: 100%;
-    background-color:   #1c2124;
+    background-color:   #757ED1;
     padding: 40px 0;
     border-radius: 25px;
+     display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 40px;
 }
 
 .slide-content {
     margin: 0 40px;
+    display: v;
+    
 }
 .cardH {
     border-radius: 25px;
@@ -393,7 +399,7 @@ h3 {
     
 } 
 .card-content {
-    display: flex;
+    display: block;
     flex-direction: column;
     align-items: center;
     padding: 10px 14px;
