--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
   --charcoal: hsla(218, 22%, 26%, 1);
   --raisin-black: hsla(216, 14%, 14%, 1);
   --light-gray: hsla(0, 0%, 79%, 1);
-  --blue-crayola: hsla(219, 72%, 56%, 1);
+  --blue-crayola: rgb(62, 119, 224);
   --black-coral: hsla(220, 12%, 43%, 1);
 
   /* * typography*/
@@ -878,4 +878,10 @@ body.nav-active { overflow: hidden; }
 
   .feature-list { grid-template-columns: 1fr 1fr; }
 
+}
+.players{
+  display: block;
+}
+.players li{
+  display: flex;
 }
