--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,10 +233,12 @@ body.nav-active { overflow: hidden; }
   z-index: 999;
 }
 
+
 .header.active {
   background-color: var(--white);
   position: fixed;
   animation: slideIn 0.5s ease forwards;
+  color: rebeccapurple;
 }
 
 @keyframes slideIn {
