--- a/Stayel.css
+++ b/Stayel.css
@@ -127,10 +127,12 @@ h3 {
 
 .Shop {
     width: 100%;
-    height: 100vh;
+    min-height: 600px;
     background-color: #171a1c;
     color: #ffffff;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .title {
     display: flex;
@@ -271,11 +273,12 @@ h3 {
 
 
 .btn {
-    position: relative;
+    margin-left: 90px;
+    margin-bottom: 30px;
     width: 100%;
     height: 45px;
     background: transparent;
-    background-color: aqua;
+    background-color: rgb(10, 20, 20);
     border-color: aqua;
     outline: none;
     border-radius: 40px;
@@ -283,7 +286,9 @@ h3 {
     font-size: 16px;
     color: rgb(255, 255, 255);
     font-weight: 600;
+
     transition: .5s;
+
 }
 .btn:hover {
     background-color: transparent;
@@ -669,6 +674,13 @@ input[type=text], input[type=password] {
     
 }
 
+.sasa{
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+gap: 100px;
+margin-top: 110px;
+}
+
 .gallery .koo {
     text-align: center;
     font-size: 30px;
@@ -685,7 +697,7 @@ input[type=text], input[type=password] {
     
 }
 .content3 {
-    width: 20%;
+    width: 70%;
     margin: 15px;
     box-sizing: border-box;
     float: left;
@@ -695,7 +707,10 @@ input[type=text], input[type=password] {
     padding-top: 10px;
     box-shadow: 0 14px 28px rgba(0 0,0,0.25), 0 10px 10px rgba(0 0,0,0.22);
     transition: .4s;
-    background: #171a1c;
+    background: #0f8fa7;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    gap: 15px;
 }
 
 .gallery .alahly {
@@ -704,9 +719,9 @@ input[type=text], input[type=password] {
     border-radius: 25px;
     text-align: center;
     margin: 0 auto;
-    display: block;
+
 }
-.content3:hover{
+tent3:hover{
     box-shadow: 0 30px 6px rgba(0 0,0,0.16), 0 3px 6px rgba(0 0,0,0.23);
     transform: translate(0px -8px);
 }
@@ -806,6 +821,106 @@ input[type=text], input[type=password] {
     line-height: 1.5;
     color: #ffffff;
     margin-bottom: 30px;
+}
+
+/*----------- Supplies *---------------*/
+
+.Shirt{
+    width: 100%;
+    min-height: 100vh;
+    background: #0f8fa7;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.Supplies{
+    width: 90%;
+    max-width: 750px;
+    display: flex;
+}
+
+
+.imge1{
+    flex-basis: 47%;
+    background: #DDDDDD;
+    transform: scalc(1.08);
+    box-shadow: -10px 5px 10px 10px rgba(0, 0, 0, 0.1);
+
+
+}
+
+
+.imge1 img{
+    width: 100%;
+    display: block;
+    padding-top: 100px;
+}
+
+.details{
+    flex-basis: 53%;
+    background: #E2DFD0;
+    padding: 40px;
+    padding-left: 60px;
+    box-shadow: -10px 5px 10px 10px rgba(0, 0, 0, 0.1);
+    font-size: 15px;
+    font-weight: 500;
+    color: #777;
+}
+
+.details h1{
+    color: #333;
+    font-size: 35px;
+}
+.details h2{
+    color: #555;
+    font-size: 30px;
+    font-weight: 600;
+
+}
+.details h3{
+    color: blue;
+    margin-bottom: 20px;
+}
+
+.details form{
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.size-select{
+    display: flex;
+    align-items: center;
+    margin-top: 50px;
+
+}
+
+.size-select p{
+    width: 70px;
+}
+.size-select span{
+    font-size: 15px;
+    color: #777;
+}
+.size-select input:checked + span{
+
+    color: blue;
+    font-weight: 500;
+}
+
+.size-select input{
+    display: none;
+}
+
+.size-select span{
+    padding: 5px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.details .social{
+    margin-top: 15px;
+    padding-left: 150px;
 }
 
 
