--- a/assets/css/sliders.css
+++ b/assets/css/sliders.css
@@ -37,7 +37,7 @@
         font-size: 1.6rem;
         line-height: 3rem;
         width: 220px;
-        height: 200px;
+        padding: 16px;
         display: flex;
         flex-direction: column;
         align-items: center;
